--- a/Sankey/Readme
+++ b/Sankey/Readme
@@ -1,1 +1,1 @@
-<b>Please upload a .csv file with categorical data. If a row identifier exists kindly remove it before uploading the data.
+Please upload a .csv file with categorical data. If a row identifier exists kindly remove it before uploading the data.
