--- a/Sankey/Readme
+++ b/Sankey/Readme
@@ -1,1 +1,3 @@
 Please upload a .csv file with categorical data. If a row identifier exists kindly remove it before uploading the data.
+
+For NetworkD3 Sankey you can use a JSON file to obtain the visualization.
